Russian translation update to r8212
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8213 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/faq.xml
+++ b/content/locale/ru/faq.xml
@@ -9,7 +9,7 @@
 				Эти интерфейсы предоставляются в виде идентификаторов (id) и классов (class) HTML-разметки, и Вы можете использовать CSS для определения своего собственного стиля.
 			</xhtml:p>
 			<xhtml:p>
-				Пример описания стиля можно найти в <xhtml:a href="/content/resources/css/user-content-example.css">локальном файле</xhtml:a> или <xhtml:a href="http://foxtrick.googlecode.com/svn/trunk/content/resources/css/user-content-example.css">на сайте проекта foxtrick</xhtml:a>, который Вы можете модифициковать как Вам угодно.
+				Пример описания стиля можно найти в <xhtml:a href="/content/resources/css/user-content-example.css">локальном файле</xhtml:a> или <xhtml:a href="http://foxtrick.googlecode.com/svn/trunk/content/resources/css/user-content-example.css">на сайте проекта foxtrick</xhtml:a>, который Вы можете модифицировать как Вам угодно.
 				После сохранения модификаций в файле, Вы можете использовать модуль <xhtml:a href="#module=SkinPlugin">SkinPlugin</xhtml:a> для загрузки этого файла CSS-стилей.
 			</xhtml:p>
 		</answer>
@@ -18,20 +18,20 @@
 		<question>Зачем мне авторизовать FoxTrick для доступа к данным моей команды?</question>
 		<answer>
 			<xhtml:p>
-				Несмотря на то, что бо́льшая часть данных, нужных FoxTrick-у, и может быть получена напрямую со страницы, которую Вы просматриваете, некоторые модули требуют загрузки дополнительных данных Hattrick-а для корректной работы.
+				Несмотря на то, что бо́льшая часть данных, нужных FoxTrick-у, и может быть получена напрямую со страницы, которую Вы просматриваете, некоторые модули для корректной работы требуют загрузки дополнительных данных из Hattrick.
 			</xhtml:p>
 			<xhtml:p>
-				Для загрузки данных Hattrick-а, включая данные Вашей собственной команды, лиги и национальных сборных, Вам нужна заранее авторизовать FoxTrick.
+				Для загрузки данных из Hattrick, включая данные Вашей собственной команды, лиги и национальных сборных, Вам нужно предварительно авторизовать FoxTrick.
 			</xhtml:p>
 			<xhtml:p>
-				Вы авторизуете FoxTrick с помощью ввода Ваших имени и пароля на странице chpp.hattrick.org для получения кода авторизации, который Вы сообщаете FoxTrick-у.
+				Вы авторизуете FoxTrick с помощью ввода Ваших имени и пароля на странице chpp.hattrick.org для получения кода авторизации, который Вы и сообщите FoxTrick-у.
 				FoxTrick не будет знать Ваших регистрационного имени и пароля в течение всего процесса авторизации.
 			</xhtml:p>
 			<xhtml:p>
 				Для получения более полной информации о процессе авторизации, прочитайте статью <xhtml:a href="http://www.hattrick.org/Community/CHPP/ChppUserDescription.aspx">CHPP - Как это работает</xhtml:a> на сайте Hattrick.
 			</xhtml:p>
 			<xhtml:p>
-				Модули, которые требуют доступа к данным для корректной работы:
+				Модули, которым для корректной работы необходим доступ к данным:
 			</xhtml:p>
 			<xhtml:ul>
 				<xhtml:li><xhtml:a href="#module=CrossTable">CrossTable</xhtml:a></xhtml:li>
@@ -54,12 +54,12 @@
 		<question>Как FoxTrick защищает мои личные данные?</question>
 		<answer>
 			<xhtml:p>
-				FoxTrick не загружает никакие никакие Ваши данные или настройки на свой сервер;
+				FoxTrick не загружает никакие Ваши данные или настройки на внешний сервер;
 				также FoxTrick никогда не будет никуда посылать любые Ваши данные,
 				включая в том числе Ваше регистрационное имя, пароль, а также id игроков вместе с уровнями их навыков.
 			</xhtml:p>
 			<xhtml:p>
-				Большая часть данных, передаваемых третьим сторонам, за исключением указанных ниже случаев, передаются с помощью метода HTTP GET, и будут переданы только при переходе по ссылке.
+				Бо́льшая часть данных, передаваемых третьей стороне (за исключением указанных ниже случаев), передаётся с помощью метода HTTP GET, и данные будут переданы только при явном переходе по ссылке.
 			</xhtml:p>
 			<xhtml:p>
 				Таким образом, Вы можете видеть, какие данные передаются, при простом взгляде на URI (Uniform Resource Identifier — унифицированный идентификатор ресурса) внешней ссылки,
@@ -68,7 +68,7 @@
 			</xhtml:p>
 			<xhtml:p>
 				Единственное исключение — модуль <xhtml:a href="#module=HTMSPrediction">HTMSPrediction</xhtml:a>,
-				в котором рейтинги, показанные в матчах, передаются на сайт <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=home&amp;lang=en">Hattrick Match Statistics</xhtml:a> с использованием XMLHttpRequest.
+				который передаёт рейтинги, показанные в матчах, на сайт <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=home&amp;lang=en">Hattrick Match Statistics</xhtml:a> с использованием метода XMLHttpRequest.
 			</xhtml:p>
 		</answer>
 	</item>
