Korean Translation Update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8263 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -1,4 +1,4 @@
-# Korean language file
+# Korean language file r8245
 # utf-8 encoded
 # By SI-CH(userid=9845514)
 
@@ -149,6 +149,7 @@ foxtrick.ConfirmActions.StaffChange.desc=직원 고용/해고
 foxtrick.PersonalityImages.desc=선수 페이지의 정신에 대한 숫자 배경색 추가
 foxtrick.HideSignatures.desc=토론장 포스트 안의 서명 감추고 '서명' 링크 표시
 foxtrick.MarkUnread.desc=읽지 않은 포스팅 모두 표시 링크 추가
+foxtrick.ForumModeratorIconLinks.desc=운영자 권한이 있으면 스레드 상단에 운영자 기능 접근을 위한 아이콘 추가
 foxtrick.ForumNextAndPrevious.desc=활성화 되지 않은 '이전', '다음' 버튼 제거
 foxtrick.ForumLastPost.desc=읽은 스레드 중 첫 번째 포스팅 대신에 마지막 포스팅으로 이동
 foxtrick.ForumLastPost.lastpage.desc=마지막 포스팅이 아니라 마지막 페이지로 이동
@@ -564,6 +565,7 @@ matchOrder.AddMatchManually=수동으로 경기 추가
 matchOrder.swapPositions=좌우 바꾸기
 matchOrder.options=옵션
 matchOrder.staminaDiscount=체력 감소
+matchOrder.staminaDiscount.title=부분 레이팅에 기여하는 선수의 체력 감소에 따라 감소됩니다
 matchOrder.summary=요약
 
 #Skills
@@ -1040,6 +1042,7 @@ sort.up=위
 sort.down=아래
 action.clearCache=캐시 청소
 action.clearCache.title=폭스트릭 Xml 캐시 청소. 폭스트릭은 요구에 따라 Hattrick 서버로부터 추가 정보를 다운로드합니다. 당신이 브라우저를 닫을 때까지 폭스트릭은 로컬로 저장된 복사본을 사용할 것입니다. 드문 경우에 오래된 것을 얻을 수 있습니다. 폭스트릭이 다시 추가 정보를 다시 받고 싶으시면 캐시 청소하세요.
+featureHighlight.title=폭스트릭 대부분의 기능 강조하려면 클릭하세요
 
 # fennec ui
 pageAction.rightSidebar=오른쪽 바 나타내기
