Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8275 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -90,6 +90,7 @@ foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Замени текст линка
 foxtrick.EmbedMedia.EmbedSoundCloud.desc=Угради Soundcloud 
 foxtrick.EmbedMedia.EmbedFlickrImages.desc=Угради Flickr слике
 foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Угради Deviantart слике
+foxtrick.EmbedMedia.EmbedGenericImages.desc=Угради слику ако је у питању директан линк до ње
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Додаје линкове за прелазак на одређену страницу у теми на Форуму.
 #
@@ -382,6 +383,9 @@ foxtrick.RatingsDisplay.HatStats.desc=Хатстатс
 
 
 # IN-GAME STRINGS. translate first
+
+#Embed Media
+foxtrick.EmbedMedia.EmbeddedImage=Уграђена слика
 
 #icons
 foxtrick.ExtraShortcuts.statistics=Супортер статистика
@@ -1040,6 +1044,7 @@ sort.up=Растуће
 sort.down=Опадајуће
 action.clearCache=Обриши кеш
 action.clearCache.title=Брише Фокsтрикову Xml кеш меморију. Фокстрик скида додатне информације са Хеттрик сервера на ваш захтев. Све док не затворите ваш интернет пргледник, Фокстрик ће користити податке који су локално сачувани. У ретким случајевима ови подаци могу бити ѕастарели. Обришите Фокстрикову кеш меморију да скинете те додатне информације поново.
+featureHighlight.title=Кликни да означиш већину Фокстрик додатака на овој страници
 
 # fennec ui
 pageAction.rightSidebar=Прикажи десни бар
