Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8287 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -91,6 +91,7 @@ foxtrick.EmbedMedia.EmbedSoundCloud.desc=Угради Soundcloud
 foxtrick.EmbedMedia.EmbedFlickrImages.desc=Угради Flickr слике
 foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Угради Deviantart слике
 foxtrick.EmbedMedia.EmbedGenericImages.desc=Угради слику ако је у питању директан линк до ње
+foxtrick.EmbedMedia.EmbedGenericImagesClever.desc=Покушај да погодиш праву адресу слике ако оригинални линк не изгледа као да директно води до слике.
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Додаје линкове за прелазак на одређену страницу у теми на Форуму.
 #
