--- a/content/locale/ja/htlang.xml
+++ b/content/locale/ja/htlang.xml
@@ -2,10 +2,10 @@
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="My Hattrick" />
-	<MyClub value="クラブ" />
+	<MyClub value="My Club" />
 	<World value="世界" />
 	<Forum value="フォーラム" />
-	<Shop value="ストア" />
+	<Shop value="ショップ" />
 	<Help value="ヘルプ" />
 
 	<!-- rating sublevels appearing in match detail page. copy "text" -->
