Russian translation update to r8317
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8318 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -17,6 +17,7 @@
 		<item>Корейский перевод (SI-CH).</item>
 		<item>Литовский перевод (LA-MJ).</item>
 		<item>Очистка неиспользуемых данных в переводах (CatzHoek).</item>
+		<item>Добавлены ссылки на страницу статистики <xhtml:a href="http://www.htev.org/">http://htev.org/</xhtml:a>.</item>
 		<item>Некоторые мелкие исправления (convincedd, CatzHoek).</item>
 	</note>
 
