Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8336 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -359,7 +359,7 @@ foxtrick.MarkAllAsRead.desc=Дугме за означавање свих тем
 foxtrick.ShowFriendlyBooked.desc=Означи тимове који су заказали пријатељску утакмицу на страници лиге
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Приказуј само на изричит захтев
 foxtrick.TickerAlert.desc=Покажи обавештење кад год се појави нова информација у тикеру. Да искључите звучно обавештење, поље за адресу звучног фајла оставите празно.
-foxtrick.ShowLineupSet.desc=Highlight teams that have set a lineup, and/or ownerless teams, and/or winning teams in league fixture/result table
+foxtrick.ShowLineupSet.desc=Означава тимове који су издали налоге за меч, и/или тимове без власника, и/или победнике у лигашким мечевима на страници лиге
 foxtrick.ShowLineupSet.LineupSet.desc=Означи тимове који су током протекле недеље поставили или мењали налоге за меч.
 foxtrick.ShowLineupSet.Ownerless.desc=Означи сивом бојом ботове и тимове без власника.
 foxtrick.ShowLineupSet.Winning.desc=Означи тимове који су победили у последњем колу.
