@0.8: release-notes copied over from trunc
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8369 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -17,6 +17,7 @@
 <item>한국어 업데이트 (SI-CH)</item>
 <item>리투아니아어 업데이트 (LA-MJ)</item>
 <item>기본 언어 정리 (CatzHoek)</item>
+<item><xhtml:a href="http://www.htev.org/">http://htev.org/</xhtml:a> 통계 페이지 링크 추가. (convincedd, CatzHoek)</item>
 <item>기타 사소한 수정. (convincedd, CatzHoek)</item>
 </note>
 
