@0.8: uk htlang fix
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8376 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/uk/htlang.xml
+++ b/content/locale/uk/htlang.xml
@@ -2,7 +2,7 @@
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Мій Hattrick" />
-	<MyClub value="Мій Клуб" />
+	<MyClub value="Мій клуб" />
 	<World value="Світ" />
 	<Forum value="Форум" />
 	<Shop value="Крамниця" />
