--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -124,7 +124,7 @@ foxtrick.LinksAchievements.desc=Додаје персонализоване ли
 foxtrick.LinksStaff.desc=Додаје персонализоване линкове на страницу особља.
 foxtrick.LinksTracker.desc=Додаје неколико екстерних линкова за базе играча репрезентација одговарајућим страницама националних тимова и играча.
 foxtrick.LinksClubTransfers.desc=Додаје персонализоване линкове на страницу 'Тренутне понуде' за трансфере вашег клуба.
-foxtrick.LoyalityDisplay.desc=Означава ефекат оданости и бонуса за матични клуб на страници играча (само ако је опција за приказивање вештина путем линија укључена)
+foxtrick.LoyalityDisplay.desc=Означава ефекат оданости и бонуса за матични клуб на страници играча (само ако је укључена опција 'Прикажи вештине као линије')
 foxtrick.ForumAlterHeaderLine.desc=Модификација заглавља порука на форуму.
 foxtrick.Singleline2.desc=Алтернативни ForumHeader модул за приказивање заглавља на форуму у једној линији. Нешто je бржи од осталих верзија. Онемогућава неке од конфликата у модулима који мењају изглед порука на форуму.
 # please translate next lines again if needed
