crowdin : Renamed es, pt, pt_BR, nn, sv, zh, zh to crowdin compatible codes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8401 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/pt-BR/htlang.xml
+++ b/content/locale/pt-BR/htlang.xml
@@ -1,4 +1,4 @@
-<language name="pt_BR" desc="Português Brasil">
+<language name="pt-BR" desc="Português Brasil">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection -->
 	<MyHattrick value="Meu Hattrick" />
