--- a/content/locale/es-ES/htlang.xml
+++ b/content/locale/es-ES/htlang.xml
@@ -1,4 +1,4 @@
-<language name="es" desc="Español">
+<language name="es-ES" desc="Español">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Mi Hattrick" />
