Crowin migration: Fix earlier error with no vs. nn-NO twist
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8405 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/nn-NO/htlang.xml
+++ b/content/locale/nn-NO/htlang.xml
@@ -1,4 +1,4 @@
-<language name="nn" desc="Norsk, nynorsk">
+<language name="nn-NO" desc="Norsk, nynorsk">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Mitt Hattrick" />
