--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -13,6 +13,7 @@
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
+pluralForm=1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -986,7 +987,7 @@ CrossTable.noMatches=Bisher wurden noch keine Spiele ausgetragen.
 
 # MyMonitor
 MyMonitor.header=Meine Beobachtungen
-MyMonitor.teams=%s Teams in Beobachtung
+MyMonitor.teams=%s Team in Beobachtung;%s Teams in Beobachtung
 MyMonitor.add=Zu Meine Beobachtungen zufügen
 MyMonitor.remove=Von Meine Beobachtungen entfernen
 MyMonitor.addHelp=Gehe zum Team, das du beobachten willst. Auf der rechten Seite wirst du einen Link zum Hinzufügen zur Beobachtung sehen.
