Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8422 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -13,6 +13,8 @@
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
+#some strings use plural forms. for rules and pluralForm ids see https://developer.mozilla.org/en/Localization_and_Plurals
+pluralForm=7
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -996,7 +998,8 @@ CrossTable.noMatches=Још увек нема одиграних мечева.
 
 # MyMonitor
 MyMonitor.header=Мој монитор
-MyMonitor.teams=%s тимова које пратите
+#uses pluralForms
+MyMonitor.teams=%s тим који пратите;%s тима која пратите;%s тимова које пратите
 MyMonitor.add=Убаци у монитор
 MyMonitor.remove=Уклоните овај тим иѕ монитора
 MyMonitor.addHelp=Прво идите на страницу тима којег желите да пратите. У менију са десне стране ћете наћи линк за убацивање у монитор.
