Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8423 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -999,7 +999,7 @@ CrossTable.noMatches=Још увек нема одиграних мечева.
 # MyMonitor
 MyMonitor.header=Мој монитор
 #uses pluralForms
-MyMonitor.teams=%s тим који пратите;%s тима која пратите;%s тимова које пратите
+MyMonitor.teams=%s тим којег пратите;%s тима која пратите;%s тимова које пратите
 MyMonitor.add=Убаци у монитор
 MyMonitor.remove=Уклоните овај тим иѕ монитора
 MyMonitor.addHelp=Прво идите на страницу тима којег желите да пратите. У менију са десне стране ћете наћи линк за убацивање у монитор.
