--- a/maintainer/README
+++ b/maintainer/README
@@ -19,7 +19,7 @@ Version Bump
 ============
 A version bump comes after the release of a major stable version
 
-Keep in mind to modify the following files:
+Keep in mind to modify the following files: (version.sh can/should be used for that)
 * install.rdf (For Gecko)
 * manifest.json (For Chrome)
 * config.xml (For Opera)
@@ -36,13 +36,13 @@ Releasing Stable Versions
 =========================
 Do these things in order:
 * Bump version.
-* Build with `make DIST_TYPE=stable`, and (for each platform):
-  * Gecko: Upload foxtrick.xpi to mozdev.org
+* Set URL to 'http://foxtrick.foundationhorizont.org/release' & DEST and DIST to 'release' in upload.conf.sh
+  * Build and upload to foxtrick.org using upload-nightly.sh
+* Build with `make DIST_TYPE=hosting`, 
+  * Gecko: Upload foxtrick.xpi to addons.mozilla.org
   * Chrome: Upload foxtrick.zip to Chrome extension hosting
-  * Opera: Upload foxtrick.oex to Opera's hosting
-  * Safari: Upload foxtrick.safariextz to somewhere we host
-* Build with `make DIST_TYPE=amo`, and upload to addons.mozilla.org.
-* Edit homepage at Google Code and mozdev.
+  * Opera: Upload foxtrick.oex to Opera's hosting (https://addons.opera.com/de/developer/). no version uploaded yet.  
+* Edit homepage at Google Code and foxtrick.org.
 * Write a new post at Hattrick forum.
 
 Ryan Li <ryan@ryanium.com>
