Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8430 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -766,7 +766,7 @@ foxtrick.staffconfirmationsack=Заиста желите да отпустите
 foxtrick.ntremoveconfirmation=Да ли заиста желиш да додаш/избациш овог играча из екипе?
 foxtrick.confirmstripserver=Да ли желите да уклоните адресу Хеттрик сервера са линкова како би били употребљиви на Форуму?
 foxtrick.conferences.signaturetoggle=Потпис
-foxtrick.conferences.markunread=Наредне=непрочитане
+foxtrick.conferences.markunread=Означи све наредне постове као непрочитане
 foxtrick.tweaks.selectplayer=Изабери играча
 foxtrick.linkscustom.selecticon=Изабери иконицу
 foxtrick.linkscustom.addpersonallink=Моји линкови
