--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1127,9 +1127,11 @@ foxtrick.prefs.oauth.delete=OAuth Token/Secret der gewählten Vereinsid löschen
 # NOTE - please preserve the braces, inner content will be converted to link
 
 foxtrick.prefs.labelDisableAll=Deaktivieren aller FoxTrick Module
+
 foxtrick.prefs.labelSavePrefs=Foxtrickeinstellungen exportieren
 foxtrick.prefs.labelSavePrefs_Prefs=Exportiere FoxTrick-Einstellungen
 foxtrick.prefs.labelSavePrefs_Notes=Exportiere persönliche Daten (Notizen, Vorlagen & eigene Links)
+foxtrick.prefs.labelSavePrefs_Token=OAuth token und OAuth secret
 foxtrick.prefs.saveNotice=Kopiere den Inhalt des Textfeldes in eine Datei. Auf die Art kannst du später die Daten wieder importieren.
 foxtrick.prefs.labelLoadPrefs=FoxTrick-Einstellungen importieren (Aktuelle Einstellungen können überschrieben werden. Neustart erforderlich)
 foxtrick.prefs.loadNotice=Kopiere deine gespeicherten Einstellungen in das Textfeld und drücke "Importieren" um deine Einstellungen zu importieren.
