--- a/content/locale/es-AR/htlang.xml
+++ b/content/locale/es-AR/htlang.xml
@@ -1,35 +1,35 @@
-<language name="es_ca" desc="Español, Centroamericano">
+<language name="es-AR" desc="Español, Sudamericano">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Mi Hattrick" />
 	<MyClub value="Mi Club" />
-	<World value="Mundo" />
-	<Forum value="Foro" />
+	<World value="El Mundo" />
+	<Forum value="Conferencias" />
 	<Shop value="Tienda" />
 	<Help value="Ayuda" />
 
 	<!-- rating sublevels appearing in match detail page. copy "text" -->
 	<ratingSubLevels>
-		<sublevel text="(Muy bajo)" value="0.0" />
-		<sublevel text="(Bajo)" value="0.25" />
-		<sublevel text="(Alto)" value="0.50" />
-		<sublevel text="(Muy alto)" value="0.75" />
+		<sublevel text="(muy bajo)" value="0.0" />
+		<sublevel text="(bajo)" value="0.25" />
+		<sublevel text="(alto)" value="0.50" />
+		<sublevel text="(muy alto)" value="0.75" />
 	</ratingSubLevels>
 
 	<!-- tactics appearing in match detail page. copy "value" -->
 	<tactics>
 		<tactic type="normal" value="Normal" />
 		<tactic type="pressing" value="Presionar" />
-		<tactic type="ca" value="Contraataques" />
+		<tactic type="ca" value="Contraatacar" />
 		<tactic type="aow" value="Atacar por las bandas" />
 		<tactic type="aim" value="Atacar por el centro" />
 		<tactic type="creatively" value="Jugar creativamente" />
-		<tactic type="longshots" value="Tiros largos" />
+		<tactic type="longshots" value="Tiros lejanos" />
 	</tactics>
 
-	<!-- positions appearing on players page -->
+	<!-- positions appearing on players page. copy "value". translate "short" -->
 	<positions>
-		<position type="Keeper" value="Portero" short="Po" />
+		<position type="Keeper" value="Arquero" short="Ar" />
 		<position type="Central defender" value="Defensor central" short="Dc" />
 		<position type="Wing back" value="Defensor lateral" short="Dl" />
 		<position type="Inner midfielder" value="Medio central" short="Mc" />
@@ -41,10 +41,10 @@
 	<specialties>
 		<specialty type="Unpredictable" value="Impredecible" short="Im" />
 		<specialty type="Powerful" value="Potente" short="Po" />
-		<specialty type="Quick" value="Rápido" short="Rá" />
+		<specialty type="Quick" value="Rápido" short="Rà" />
 		<specialty type="Technical" value="Técnico" short="Te" />
 		<specialty type="Head" value="Cabeceador" short="Ca" />
-		<specialty type="Regainer" value="Recuperador" short="Re" />
+		<specialty type="Regainer" value="Regainer" short="Re" />
 	</specialties>
 
 	<!-- levels word connections appearing denominations page. copy "text" -->
@@ -71,31 +71,40 @@
 		<level text="desastroso" value="1" />
 		<level text="inexistente" value="0" />
 	</levels>
-
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<agreeability>
-                <level text="querido compañero de equipo" value="5" />
-                <level text="popular" value="4" />
-                <level text="carismático" value="3" />
-                <level text="agradable" value="2" />
-                <level text="polémico" value="1" />
-                <level text="antipático" value="0" />
+		<level text="querido compañero de equipo" value="5"/>
+		<level text="popular" value="4"/>
+		<level text="carismático" value="3"/>
+		<level text="agradable" value="2"/>
+		<level text="polémico" value="1"/>
+		<level text="malintencionado" value="0"/>
 	</agreeability>
-
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<honesty>
-			<level text="santito" value="5" />
-			<level text="honorable" value="4" />
-			<level text="justo" value="3" />
-			<level text="honesto" value="2" />
-			<level text="deshonesto" value="1" />
-			<level text="nefasto" value="0" />
+		<level text="santo" value="5"/>
+		<level text="honorable" value="4"/>
+		<level text="justo" value="3"/>
+		<level text="honesto" value="2"/>
+		<level text="deshonesto" value="1"/>
+		<level text="infame" value="0"/>
 	</honesty>
-
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
 	<aggressiveness>
-			<level text="inestable" value="5" />
-			<level text="iracundo" value="4" />
-			<level text="temperamental" value="3" />
-			<level text="estable" value="2" />
-			<level text="calmado" value="1" />
-			<level text="tranquilo" value="0" />
+		<level text="inestable" value="5"/>
+		<level text="iracundo" value="4"/>
+		<level text="temperamental" value="3"/>
+		<level text="estable" value="2"/>
+		<level text="calmado" value="1"/>
+		<level text="tranquilo" value="0"/>
 	</aggressiveness>
 </language>
