Russian: fixing annoying 'YouthPromotes.future'
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8443 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -412,7 +412,7 @@ foxtrick.HistoryStats.cupwinner=Побед в кубке
 foxtrick.HistoryStats.cupwinner.short=ПК
 
 # YouthPromotes
-YouthPromotes.future=Игрок может быть вызван через %1 дней, %2.
+YouthPromotes.future=Игрок может быть вызван через %1 день, %2.;Игрок может быть вызван через %1 дня, %2.;Игрок может быть вызван через %1 дней, %2.
 YouthPromotes.today=Игрок может быть вызван сегодня!
 
 # links
