Locale (Greek) "gr" renamed to "el"
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8444 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/el/htlang.xml
+++ b/content/locale/el/htlang.xml
@@ -1,4 +1,4 @@
-<language name="gr" desc="Ελληνικά">
+<language name="el" desc="Ελληνικά">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Το Hattrick μου" />
