Locale (Frisian) "fy" renamed to "fy-NL"
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8445 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fy-NL/htlang.xml
+++ b/content/locale/fy-NL/htlang.xml
@@ -1,4 +1,4 @@
-<language name="fy" desc="Frysk">
+<language name="fy-NL" desc="Frysk">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Myn Hattrick" />
