--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -13,7 +13,7 @@
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
-pluralForm=1
+pluralFormRuleID=1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
