Russian translation update to r8421
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8464 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 # ru-RU (Russian language file)
-# based on MASTER language file r8417
+# based on MASTER language file r8421
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -13,8 +13,8 @@
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
-#some strings use plural forms. for rules and pluralForm ids see https://developer.mozilla.org/en/Localization_and_Plurals
-pluralForm=7
+#some strings use plural forms. for rules and pluralFormRuleID ids see https://developer.mozilla.org/en/Localization_and_Plurals
+pluralFormRuleID=7
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -412,6 +412,7 @@ foxtrick.HistoryStats.cupwinner=Побед в кубке
 foxtrick.HistoryStats.cupwinner.short=ПК
 
 # YouthPromotes
+#following string uses pluralForms
 YouthPromotes.future=Игрок может быть вызван через %1 день, %2.;Игрок может быть вызван через %1 дня, %2.;Игрок может быть вызван через %1 дней, %2.
 YouthPromotes.today=Игрок может быть вызван сегодня!
 
@@ -703,7 +704,8 @@ Last_stars_decline=Недопоказанные звёзды
 Last_stars_decline.abbr=Разн
 Last_position=Последняя позиция
 Last_position.abbr=Поз
-Last_match_played_as=В своём последнем матче сыграл %1 мин на позиции %2
+#following string uses pluralForms
+Last_match_played_as=В своём последнем матче сыграл %1 минуту на позиции %2.;В своём последнем матче сыграл %1 минуты на позиции %2.;В своём последнем матче сыграл %1 минут на позиции %2.
 
 Bruised=Повреждён
 Bruised.abbr=Пвр
@@ -790,8 +792,10 @@ foxtrick.defensiveTrainer=Тренер, предпочитающий игру о
 foxtrick.offensiveTrainer=Тренер, предпочитающий атакующий стиль. Уровень тренерского навыка - %s.
 foxtrick.balancedTrainer=Тренер, предпочитающий баланс между атакой и обороной. Уровень тренерского навыка - %s.
 
-notify.newMail=Новых почтовых сообщений: %s.
-notify.newForumMessage=Новых ответов в форуме: %s.
+#following string uses pluralForms
+notify.newMail=Вы получили %s новое сообщение.;Вы получили %s новых сообщений.;Вы получили %s новых сообщений.
+#following string uses pluralForms
+notify.newForumMessage=В форуме есть %s новый ответ для Вас.;В форуме есть %s новых ответа для Вас.;В форуме есть %s новых ответов для Вас.
 
 htLive=HT Live
 
@@ -998,7 +1002,7 @@ CrossTable.noMatches=Ни одного матча ещё не сыграно.
 
 # MyMonitor
 MyMonitor.header=Мониторинг
-#uses pluralForms
+#following string uses pluralForms
 MyMonitor.teams=Отслеживается %s команда;Отслеживается %s команды;Отслеживается %s команд
 MyMonitor.add=Отслеживать эту команду
 MyMonitor.remove=Удалить команду из мониторинга
