general bellow->below fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8474 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-MX/foxtrick.properties
+++ b/content/locale/es-MX/foxtrick.properties
@@ -364,7 +364,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Permanacer en la página de instrucc
 foxtrick.MatchOrderInterface.SwapPositions.desc=Añade un enlace para intercambiar jugadores de izquierda a derecha
 foxtrick.MatchSimulator.desc=Añade un simulador de partidos a la inerfaz de instrucciones
 foxtrick.MatchSimulator.RatingsOnTop.desc=Mantiene la predicción de calificaciones en la parte superior
-foxtrick.MatchSimulator.RatingsBellow.desc=Mostrar la predicción en la parte inferior
+foxtrick.MatchSimulator.RatingsBelow.desc=Mostrar la predicción en la parte inferior
 foxtrick.MatchSimulator.RatingsRight.desc=Mostrar la predicción en la parte derecha
 foxtrick.HeaderToggle.desc=Al hacer clic en los encabezados h2 se alterna mostrar y ocultar la siguiente sección. Recuerda el último ajuste de forma individual según el tipo de página y el título de encabezado
 foxtrick.Filter.desc=Añade filtros a la página de Mejores Jugadores
