--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -371,7 +371,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Išsaugojus sudėtį neuždaryti nu
 foxtrick.MatchOrderInterface.SwapPositions.desc=Pridėti nuorodą, leidžiančią sukeisti žaidėjus iš kairės pusės į dešinę
 foxtrick.MatchSimulator.desc=Rungtynių nurodymų puslapyje prideda rungtynių simuliatorių.
 foxtrick.MatchSimulator.RatingsOnTop.desc=Reitingų spėjimas lieka virš sudėties
-foxtrick.MatchSimulator.RatingsBellow.desc=Rodyti spėjimą žemiau
+foxtrick.MatchSimulator.RatingsBelow.desc=Rodyti spėjimą žemiau
 foxtrick.MatchSimulator.RatingsRight.desc=Rodyti spėjimą dešinėje
 foxtrick.HeaderToggle.desc=Paspaudus ant antro lygio antraštės (su rodykle) įjungiamas ar išjungiamas tos sekcijos vaizdavimas. Nustatymai atsimenami kiekvienam puslapiui atskirai
 foxtrick.Filter.desc=Geriausių žaidėjų puslapyje pridėti filtrus
