--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -356,7 +356,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Blijf op de opstellings-pagina na o
 foxtrick.MatchOrderInterface.SwapPositions.desc=Voeg een link toe om spelers over de as van het veld te wisselen.
 foxtrick.MatchSimulator.desc=Voeg een wedstrijden simulator toe aan de opstellings-pagina.
 foxtrick.MatchSimulator.RatingsOnTop.desc=Laat de ratings voorspelling bovenop de opstelling staan
-foxtrick.MatchSimulator.RatingsBellow.desc=Plaats de ratings voorspelling onder de opstelling
+foxtrick.MatchSimulator.RatingsBelow.desc=Plaats de ratings voorspelling onder de opstelling
 foxtrick.MatchSimulator.RatingsRight.desc=Plaats de ratings voorspelling rechts van de opstelling
 foxtrick.HeaderToggle.desc=Klik op bepaalde headers om de sectie te verbergen of juist te zien. Onthoudt de laatst gekozen instelling, gebaseerd op pagina & header titel.
 foxtrick.Filter.desc=Voeg filters toe aan de lijst met top spelers
