crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8480 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -364,6 +364,7 @@ foxtrick.ShowLineupSet.Ownerless.desc=Hervorheben von Vereinen ohne Besitzer
 foxtrick.ShowLineupSet.Winning.desc=Hervorheben von Gewinners
 foxtrick.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Teams in den Supporterstatistiken
 foxtrick.MatchOrderInterface.desc=Verbesserungen der Aufstellungsseite
+foxtrick.MatchOrderInterface.Specialties.desc=Zeige Spezialfähigkeiten
 foxtrick.Filter.desc=Fügt oben auf der Spielerseite die Möglichkeit hinzu, die Spieler nach gewissen Kriterien zu filtern
 foxtrick.RatingsDisplay.HatStats.desc=Als HatStats
 
@@ -549,8 +550,10 @@ match.type.youth.league=Jugendliga
 match.type.youth.friendly=Jugendfreundschaftspiel
 match.type.youth.friendly.cup=Jugendfreundschaftspiel (Pokalregeln)
 
+matchOrder.noMatchSelected=Kein Spiel ausgewählt
 matchOrder.comparedTo=Verglichen mit\:
 matchOrder.previousPrediction=﻿Vorherige Vorhersage
+matchOrder.AddMatchManually=Füge ein Spiel manuell hinzu
 matchOrder.swapPositions=Seiten vertauschen
 matchOrder.options=Optionen
 matchOrder.summary=Zusammenfassung
@@ -593,8 +596,40 @@ categories.E1=E1
 categories.E2=E2
 
 match.pos.kp=Torwart
+match.pos.kp.abbr=TW
+match.pos.lb=Linker Außenverteidiger
+match.pos.lb.abbr=AVl
+match.pos.lcd=Linker Innenverteidiger
+match.pos.lcd.abbr=IVl
+match.pos.mcd=Zentraler Innenverteidiger
+match.pos.mcd.abbr=IVz
+match.pos.rcd=Rechter Innenverteidiger
+match.pos.rcd.abbr=IVr
+match.pos.rb=Rechter Außenverteidiger
+match.pos.rb.abbr=AVr
+match.pos.lw=Linker Flügelspieler
+match.pos.lw.abbr=FLl
+match.pos.lcm=Linker Mittelfeldspieler
+match.pos.lcm.abbr=MFl
+match.pos.mcm=Zentraler Mittelfeldspieler
+match.pos.mcm.abbr=MFz
+match.pos.rcm=Rechter Mittelfeldspieler
+match.pos.rcm.abbr=MFr
+match.pos.rw=Rechter Flügelspieler
+match.pos.rw.abbr=FLr
+match.pos.lf=Linker Stürmer
+match.pos.lf.abbr=STl
+match.pos.mf=Zentraler Stürmer
+match.pos.mf.abbr=STz
+match.pos.rf=Rechter Stürmer
+match.pos.rf.abbr=STr
 
+match.role.setPieces=Standardschütze
+match.role.setPieces.abbr=ST
+match.role.captain=Kapitän
+match.role.captain.abbr=Kapt.
 
+match.player.unknown=Unbekannter Spieler
 
 General=Allgemein
 
@@ -626,6 +661,8 @@ Form.abbr=Fo
 
 Loyality=Treue
 Loyality.abbr=Tr
+MotherClubBonus=Heimatvereinbonus
+MotherClubBonus.abbr=HB
 
 Status=Status
 Status.abbr=Status
@@ -642,6 +679,7 @@ Last_match=Letztes Spiel
 Last_match.abbr=Letztes
 Last_stars=Letzte Bewertung
 Last_stars.abbr=Str
+Last_stars_decline.abbr=Diff
 Last_position=Letzte Position
 Last_position.abbr=Pos
 #following string uses pluralForms
@@ -774,6 +812,7 @@ CopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
+MatchReportFormat.MatchReport=Spielbericht
 MatchReportFormat.lineup=Aufstellung
 MatchReportFormat.kickOff=Anstoß
 MatchReportFormat.halfTime=Halbzeitpause
@@ -835,6 +874,7 @@ less=weniger...
 TeamPopupLinks.prefsCaption=Link-Einstellungen
 TeamPopupLinks.ShowByDefault=Standardanzeige
 TeamPopupLinks.ShowOnMore=Anzeige bei 'mehr...'
+TeamPopupLinks.OpenNewTab=In neuem Tab öffnen
 
 total_stars=Summe der Sterne
 
@@ -884,6 +924,8 @@ ShowFriendlyBooked.ShowFriendlies=Freundschaftspiele anzeigen
 
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Angeschlagene ausblenden
+TransferSearchResultFilters.hideInjured=Verletzte ausblenden
 TransferSearchResultFilters.hideSuspended=Verberge Gesperrte
 TransferSearchResultFilters.days=Tage\:
 
@@ -909,11 +951,14 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non HT Föderationchat
 
 # HTMSPrediction
 HTMSPrediction.prediction=Ergebnisvorhersage
+HTMSPrediction.winDrawLoss=Sieg/Unentschieden/Niederlage
 HTMSPrediction.title=Spielanalyse durch HTMS
 HTMSPrediction.changePrediction=Vorhersage ändern
 
 #htms table of statistical truth
 truthTable.predicted_position=\#
+truthTable.real_points=Tatsächliche Punkte
+truthTable.predicted_points=Vorausgesagte Punkte
 truthTable.difference=±
 
 # HTMSPoints
@@ -980,6 +1025,7 @@ action.clearCache=Cache leeren
 action.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
 
 # fennec ui
+pageAction.all=Zeige alles
 
 # buttons
 button.ok=OK
@@ -1013,6 +1059,7 @@ oauth.link=Erhalte den Bestätigungscode von chpp.hattrick.org
 oauth.success=FoxTrick wurde erfolgreich autorisiert\! Bitte lade die Seite neu um die von FoxTrick bereitgestellten Daten angezeigt zu bekommen.
 
 api.failure=Datenzugriff auf Hattrick fehlgeschalgen. Du musst FoxTrick autorisieren um Zugriff auf deine Teamdaten zu erhalten. Wenn du dies bereits getan hast, überprüfe deine Netzwerkverbindung und versuche es später erneut.
+api.serverUnavailable=Server nicht verfügbar
 
 exception.error=Fehler %s
 
